--- a/customers.html
+++ b/customers.html
@@ -206,8 +206,9 @@
         <li><a href="">Privacy Policy</a></li>
       </ul>
       <p>knowing you're always on the best energy deal.</p>
-      <button type="button">Enter your phone number</button>
+      <button type="button">__________</button>
       <button type="button">Sign up Now</button>
+      <p>Made With Love By Figmaland All Right Reserved</p>
     </footer>
   </body>
 </html>
