--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
       <p>knowing you're always on the best energy deal.</p>
       <button type="button">Enter your phone number</button>
       <button type="button">Sign up Now</button>
+      <p>Made With Love By Figmaland All Right Reserved</p>
     </footer>
   </body>
 </html>
