--- a/pricing.html
+++ b/pricing.html
@@ -100,9 +100,62 @@
         </p>
         <button type="button">Get in touch with us</button>
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section>
+        <h2>Product is being used with great effects alongside:</h2>
+        <img src="./prising/amico.png" alt="Smart devices" />
+        <ul>
+          <li>
+            <h3>Enterpreneur</h3>
+            <p>
+              Product is a great way to help medium and samall enterprise owners
+              achieve their goals
+            </p>
+          </li>
+          <li>
+            <h3>Accountants</h3>
+            <p>
+              Whether you are working on contract with clients, or on other key
+              accounting documents, Product is for you
+            </p>
+          </li>
+          <li>
+            <h3>Universities</h3>
+            <p>
+              Organize university projects and have documents easily graded
+              online with Product
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Frequently asked question</h2>
+        <p>Something is not clear? You need help? Check our FAQ section</p>
+        <ul>
+          <li><h3>What are my payment option?</h3></li>
+          <li>
+            <h3>How can I invite collaborator to platform?</h3>
+            <p>
+              After creating your account you will have an oppurtunity to create
+              your first project that will be associated withthe collaborators
+              e-mail. An invitation will be sent automatically. Then, invited
+              user will have to confirm his account by e-mail and finish userd
+              onboarding.
+            </p>
+          </li>
+          <li><h3>Can I upgrade my plan?</h3></li>
+          <li><h3>Can I cancel my plan at anytime?</h3></li>
+        </ul>
+      </section>
+      <section>
+        <p>Join 100 Compannies who boost their business with Product</p>
+        <img
+          src="./images_customers/screen.png"
+          alt="screen"
+          width="351"
+          height="331"
+        />
+        <button type="button">Get This</button>
+      </section>
     </main>
     <footer>
       <a href="./index.html">
@@ -122,8 +175,9 @@
         <li><a href="">Privacy Policy</a></li>
       </ul>
       <p>knowing you're always on the best energy deal.</p>
-      <button type="button">Enter your phone number</button>
+      <button type="button">__________</button>
       <button type="button">Sign up Now</button>
+      <p>Made With Love By Figmaland All Right Reserved</p>
     </footer>
   </body>
 </html>
