--- a/customers.html
+++ b/customers.html
@@ -178,6 +178,7 @@
         </ul>
       </section>
       <section>
+        <h2>promo</h2>
         <p>Join 100 Compannies who boost their business with Product</p>
         <img
           src="./images_customers/screen.png"
