--- a/index.html
+++ b/index.html
@@ -306,9 +306,14 @@
         </ul>
       </section>
       <section>
-        <h2>Promo</h2>
+        <h2>promo</h2>
         <p>Join 100 Compannies who boost their business with Product</p>
-        <img src="" alt="" />
+        <img
+          src="./images_customers/screen.png"
+          alt="screen"
+          width="351"
+          height="331"
+        />
         <button type="button">Get This</button>
       </section>
     </main>
