--- a/customers.html
+++ b/customers.html
@@ -3,33 +3,59 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Customers</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@500&Inter:opsz,wght@14..32,500;700&family=Montserrat:wght@600&family=Poppins:wght@400;500;600;700;800&family=Roboto:wdth,wght@75..100, 400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/customers.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"
+        <a href="./index.html" class="header-logo"
           ><img src="./images/logo-min.png" alt="logo" width="40" height="36" />
           Product</a
         >
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="">Resources</a></li>
+        <ul class="header-nav">
+          <li class="header-nav-list">
+            <a href="./index.html"
+              ><span class="nav-item-span">Product</span></a
+            >
+          </li>
+          <li class="header-nav-list">
+            <a class="header-nav-item" href="./customers.html">Customers</a>
+          </li>
+          <li class="header-nav-list">
+            <a class="header-nav-item" href="./pricing.html">Pricing</a>
+          </li>
+          <li class="header-nav-list">
+            <a class="header-nav-item" href="#Resource">Resources</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
+      <ul class="header-reg">
+        <li class="header-reg-list">
+          <button class="header-reg-btn-in" type="button">Sign In</button>
+        </li>
+        <li class="header-reg-list">
+          <button class="header-reg-btn-up" type="button">Sign Up</button>
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Our Clients</h1>
-        <ul>
-          <li>
-            <a href=""
+      <section class="section-hero">
+        <h1 class="hero-title">Our Clients</h1>
+        <ul class="hero-list">
+          <li class="hero-list-item">
+            <a
+              class="hero-list-link"
+              href="https://www.airbnb.com"
+              target="_blank"
               ><img
                 src="./images_customers/Airbnb Logo.png"
                 alt="Airbnb Logo"
@@ -37,8 +63,11 @@
                 height="50"
             /></a>
           </li>
-          <li>
-            <a href=""
+          <li class="hero-list-item">
+            <a
+              class="hero-list-link"
+              href="https://www.google.com"
+              target="_blank"
               ><img
                 src="./images_customers/Google Logo.png"
                 alt="Google Logo"
@@ -46,8 +75,11 @@
                 height="50"
             /></a>
           </li>
-          <li>
-            <a href=""
+          <li class="hero-list-item">
+            <a
+              class="hero-list-link"
+              href="https://www.microsoft.com"
+              target="_blank"
               ><img
                 src="./images_customers/Microsoft Logo.png"
                 alt="Microsoft Logo"
@@ -55,8 +87,11 @@
                 height="44"
             /></a>
           </li>
-          <li>
-            <a href=""
+          <li class="hero-list-item">
+            <a
+              class="hero-list-link"
+              href="https://www.fedex.com/uk-ua/home.html"
+              target="_blank"
               ><img
                 src="./images_customers/FedEx Logo.png"
                 alt="FedEx Logo"
@@ -66,54 +101,54 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Why Choose Product?</h2>
-        <ul>
-          <li>
-            <h3>Special Business</h3>
-            <p>
+      <section class="section-reasons">
+        <h2 class="reasons-title">Why Choose Product?</h2>
+        <ul class="reasons-list">
+          <li class="reasons-list-item">
+            <h3 class="reasons-item-subtitle">Special Business</h3>
+            <p class="reasons-item-text">
               Product helps you see how many more days you need to work to reach
               your financial goal for the month and year.
             </p>
           </li>
-          <li>
-            <h3>Instant Result</h3>
-            <p>
+          <li class="reasons-list-item">
+            <h3 class="reasons-item-subtitle">Instant Result</h3>
+            <p class="reasons-item-text">
               Product helps you see how many more days you need to work to reach
               your financial goal for the month and year.
             </p>
           </li>
-          <li>
-            <h3>Fastest way to organize</h3>
-            <p>
+          <li class="reasons-list-item">
+            <h3 class="reasons-item-subtitle">Fastest way to organize</h3>
+            <p class="reasons-item-text">
               Product helps you see how many more days you need to work to reach
               your financial goal for the month and year.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>How Product Work?</h2>
-        <ul>
-          <li>
+      <section class="section-work">
+        <h2 class="work-title">How Product Work?</h2>
+        <ul class="work-list">
+          <li class="work-list-item">
             <img
               src="/images_customers/mac1.png"
               alt="An image on the laptop"
               width="500"
               height="279.23"
             />
-            <p>STEP 1</p>
-            <h3>Apply for a product</h3>
-            <p>
+            <p class="work-item-step">STEP 1</p>
+            <h3 class="work-item-subtitle">Apply for a product</h3>
+            <p class="work-item-text">
               Completing our easy step-by-step application form gives you access
               to multiple business with multiple products. We analyse your
               business through our proprietary credit analysis technology
             </p>
           </li>
-          <li>
-            <p>STEP 2</p>
-            <h3>Pay fully refundable</h3>
-            <p>
+          <li class="work-list-item">
+            <p class="work-item-step">STEP 2</p>
+            <h3 class="work-item-subtitle">Pay fully refundable</h3>
+            <p class="work-item-text">
               Product will contactting you instantly to receive payment of the
               Application Fee. if no offer of product is available, your fee
               will be fully refunded.
@@ -125,91 +160,111 @@
               height="279.57"
             />
           </li>
-          <li>
+          <li class="work-list-item">
             <img
               src="./images_customers/mac3.png"
               alt="An image on the laptop"
               width="500"
               height="279.57"
             />
-            <p>STEP 3</p>
-            <h3>Completion</h3>
-            <p>
+            <p class="work-item-step">STEP 3</p>
+            <h3 class="work-item-subtitle">Completion</h3>
+            <p class="work-item-text">
               Product will continue to liase between borrower and manager to
               procees and complete a quick and efficient settlement
             </p>
           </li>
         </ul>
-        <button type="button">Get in touch with us</button>
+        <button class="work-btn" type="button">Get in touch with us</button>
       </section>
-      <section>
-        <h2>Join thousand of other who have already received offers</h2>
-        <ul>
-          <li>
+      <section class="section-offers">
+        <h2 class="offers-title">
+          Join thousand of other who have already received offers
+        </h2>
+        <ul class="offers-list">
+          <li class="offers-list-item">
             <img
               src="./images_customers/Image Placeholder.png"
               alt="An example of statistics"
               width="150"
               height="150"
             />
-            <h3>Business</h3>
-            <ul>
-              <li><p>Cash Flow</p></li>
-              <li><p>Asset Backed</p></li>
-              <li><p>Receivables Finance</p></li>
+            <h3 class="offers-business-subtitle">Business</h3>
+            <ul class="offers-business-list">
+              <li class="offers-business-item">
+                <p class="business-text">Cash Flow</p>
+              </li>
+              <li class="offers-business-item">
+                <p class="business-text">Asset Backed</p>
+              </li>
+              <li class="offers-business-item">
+                <p class="business-text">Receivables Finance</p>
+              </li>
             </ul>
-            <p>Find the best business product</p>
+            <p class="offers-business-text">Find the best business product</p>
           </li>
-          <li>
+          <li class="offers-list-item">
             <img
               src="./images_customers/Image Placeholder (1).png"
               alt="An example of a graph"
               width="150"
               height="150"
             />
-            <h3>Enterprise</h3>
-            <ul>
-              <li><p>Site Acquisition</p></li>
-              <li><p>Bridge</p></li>
-              <li><p>Development Financing</p></li>
+            <h3 class="offers-enterprise-subtitle">Enterprise</h3>
+            <ul class="offers-enterprise-list">
+              <li class="offers-enterprise-item">
+                <p class="enterprise-text">Site Acquisition</p>
+              </li>
+              <li class="offers-enterprise-item">
+                <p class="enterprise-text">Bridge</p>
+              </li>
+              <li class="offers-enterprise-item">
+                <p class="enterprise-text">Development Financing</p>
+              </li>
             </ul>
-            <p>Find the best business product</p>
+            <p class="offers-enterprise-text">Find the best business product</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>promo</h2>
-        <p>Join 100 Compannies who boost their business with Product</p>
+      <section class="section-promo-last">
+        <h2 class="promo-title-last">promo</h2>
+        <p class="promo-text-last">
+          Join 100 Compannies who boost their business with Product
+        </p>
         <img
           src="./images_customers/screen.png"
           alt="screen"
           width="351"
           height="331"
         />
-        <button type="button">Get This</button>
+        <button class="promo-btn-last" type="button">Get This</button>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html">
         <img src="./images/logo-min.png" alt="logo" width="40" />Product</a
       >
-      <h3>Resource</h3>
-      <ul>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">FAQ</a></li>
+      <h3 id="Resource" class="footer-subtitle">Resource</h3>
+      <ul class="footer-list-link">
+        <li class="footer-list-item"><a href="">About Us</a></li>
+        <li class="footer-list-item"><a href="">Blog</a></li>
+        <li class="footer-list-item"><a href="">Contact</a></li>
+        <li class="footer-list-item"><a href="">FAQ</a></li>
       </ul>
-      <h3>Legal Stuff</h3>
-      <ul>
-        <li><a href="">Disclaimer</a></li>
-        <li><a href="">Financing</a></li>
-        <li><a href="">Privacy Policy</a></li>
+      <h3 class="footer-subtitle">Legal Stuff</h3>
+      <ul class="footer-list-link">
+        <li class="footer-list-item"><a href="">Disclaimer</a></li>
+        <li class="footer-list-item"><a href="">Financing</a></li>
+        <li class="footer-list-item"><a href="">Privacy Policy</a></li>
       </ul>
-      <p>knowing you're always on the best energy deal.</p>
-      <button type="button">__________</button>
-      <button type="button">Sign up Now</button>
-      <p>Made With Love By Figmaland All Right Reserved</p>
+      <p class="footer-text">knowing you're always on the best energy deal.</p>
+      <button class="footer-btn-enter" type="button">
+        Enter your phone number
+      </button>
+      <button class="footer-btn-up" type="button">Sign up Now</button>
+      <p class="footer-last-text">
+        Made With Love By Figmaland All Right Reserved
+      </p>
     </footer>
   </body>
 </html>
