--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business</title>
+    <title>Product</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,13 +28,13 @@
             >
           </li>
           <li class="header-nav-list">
-            <a class="header-nav-item" href="./pricing.html">Pricing</a>
-          </li>
-          <li class="header-nav-list">
             <a class="header-nav-item" href="./customers.html">Customers</a>
           </li>
           <li class="header-nav-list">
-            <a class="header-nav-item" href="">Resources</a>
+            <a class="header-nav-item" href="./pricing.html">Pricing</a>
+          </li>
+          <li class="header-nav-list">
+            <a class="header-nav-item" href="#Resource">Resources</a>
           </li>
         </ul>
       </nav>
@@ -393,7 +393,7 @@
       <a class="logo-footer" href="./index.html">
         <img src="./images/logo-min.png" alt="logo" width="40" />Product</a
       >
-      <h3 class="footer-subtitle">Resource</h3>
+      <h3 id="Resource" class="footer-subtitle">Resource</h3>
       <ul class="footer-list-link">
         <li class="footer-list-item"><a href="">About Us</a></li>
         <li class="footer-list-item"><a href="">Blog</a></li>
