--- a/pricing.html
+++ b/pricing.html
@@ -3,138 +3,176 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Pricing</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Asap+Condensed:wght@500&Inter:opsz,wght@14..32,500;700&family=Montserrat:wght@600&family=Poppins:wght@400;500;600;700;800&family=Roboto:wdth,wght@75..100, 400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/pricing.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"
+        <a href="./index.html" class="header-logo"
           ><img src="./images/logo-min.png" alt="logo" width="40" height="36" />
           Product</a
         >
-        <ul>
-          <li><a href="./index.html">Product</a></li>
-          <li><a href="./pricing.html">Pricing</a></li>
-          <li><a href="./customers.html">Customers</a></li>
-          <li><a href="">Resources</a></li>
+        <ul class="header-nav">
+          <li class="header-nav-list">
+            <a href="./index.html"
+              ><span class="nav-item-span">Product</span></a
+            >
+          </li>
+
+          <li class="header-nav-list">
+            <a class="header-nav-item" href="./customers.html">Customers</a>
+          </li>
+          <li class="header-nav-list">
+            <a class="header-nav-item" href="./pricing.html">Pricing</a>
+          </li>
+          <li class="header-nav-list">
+            <a class="header-nav-item" href="#Resource">Resources</a>
+          </li>
         </ul>
       </nav>
-      <ul>
-        <li><button type="button">Sign In</button></li>
-        <li><button type="button">Sign Up</button></li>
+      <ul class="header-reg">
+        <li class="header-reg-list">
+          <button class="header-reg-btn-in" type="button">Sign In</button>
+        </li>
+        <li class="header-reg-list">
+          <button class="header-reg-btn-up" type="button">Sign Up</button>
+        </li>
       </ul>
     </header>
     <main>
-      <section>
-        <h2>Pricing</h2>
-        <h1>Let’s get some real work done here.</h1>
-        <p>
+      <section class="section-price">
+        <h2 class="price-subtitle">Pricing</h2>
+        <h1 class="price-title">Let's get some real work done here.</h1>
+        <p class="price-text">
           Prodict is your perfect solution for working. Get started now for free
         </p>
-        <ul>
-          <li>
-            <h3>Free</h3>
-            <p>Brief price description</p>
-            <p>0</p>
-            <p>$</p>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>Only 2 Operators</p>
+        <ul class="price-list">
+          <li class="price-list-item-free">
+            <h3 class="price-list-subtitle-free">Free</h3>
+            <p class="price-item-text-free">Brief price description</p>
+            <p class="price-item-cost-free">0</p>
+            <p class="price-item-dollar-free">$</p>
+            <p class="price-item-month-free">Per / month</p>
+            <ul class="price-list-sublist-free">
+              <li class="price-sublist-item-free">
+                <p class="price-sublist-text-free">Only 2 Operators</p>
               </li>
-              <li>
-                <p>Notifications</p>
+              <li class="price-sublist-item-free">
+                <p class="price-sublist-not-free">Notifications</p>
               </li>
-              <li>
-                <p>Landing Pages</p>
+              <li class="price-sublist-item-free">
+                <p class="price-sublist-pages-free">Landing Pages</p>
               </li>
             </ul>
-            <button type="button">Order Now</button>
+            <button class="price-btn-free" type="button">Order Now</button>
           </li>
-          <li>
-            <h3>Standard</h3>
-            <p>Brief price description</p>
-            <p>5</p>
-            <p>$</p>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>5+ Operators</p>
+          <li class="price-list-item-standard">
+            <h3 class="price-list-subtitle-standard">Standard</h3>
+            <p class="price-item-text-standard">Brief price description</p>
+            <p class="price-item-cost-standard">5</p>
+            <p class="price-item-dollar-standard">$</p>
+            <p class="price-item-month-standard">Per / month</p>
+            <ul class="price-list-sublist-standard">
+              <li class="price-sublist-item-standard">
+                <p class="price-sublist-text-standard">5+ Operators</p>
               </li>
-              <li>
-                <p>Notifications</p>
+              <li class="price-sublist-item-standard">
+                <p class="price-sublist-not-standard">Notifications</p>
               </li>
-              <li>
-                <p>Landing Pages</p>
+              <li class="price-sublist-item-standard">
+                <p class="price-sublist-pages-standard">Landing Pages</p>
               </li>
-              <button type="button">Order Now</button>
+              <button class="price-btn-standard" type="button">
+                Order Now
+              </button>
             </ul>
           </li>
-          <li>
-            <h3>Premium</h3>
-            <p>Brief price description</p>
-            <p>10</p>
-            <p>$</p>
-            <p>Per / month</p>
-            <ul>
-              <li>
-                <p>10+ Operators</p>
+          <li class="price-list-item-premium">
+            <h3 class="price-list-subtitle-premium">Premium</h3>
+            <p class="price-item-text-premium">Brief price description</p>
+            <p class="price-item-cost-premium">10</p>
+            <p class="price-item-dollar-premium">$</p>
+            <p class="price-item-month-premium">Per / month</p>
+            <ul class="price-list-sublist-premium">
+              <li class="price-sublist-item-premium">
+                <p class="price-sublist-text-premium">10+ Operators</p>
               </li>
-              <li>
-                <p>Notifications</p>
+              <li class="price-sublist-item-premium">
+                <p class="price-sublist-not-premium">Notifications</p>
               </li>
-              <li>
-                <p>Landing Pages</p>
+              <li class="price-sublist-item-premium">
+                <p class="price-sublist-pages-premium">Landing Pages</p>
               </li>
             </ul>
-            <button type="button">Order Now</button>
+            <button class="price-btn-premium" type="button">Order Now</button>
           </li>
         </ul>
       </section>
-      <section>
-        <h3>ENTERPRISE</h3>
-        <h2>Are you interested in a custom-tailored plan?</h2>
-        <p>
+      <section class="section-enterprise">
+        <h3 class="enterprise-subtitle">ENTERPRISE</h3>
+        <h2 class="enterprise-title">
+          Are you interested in a custom-tailored plan?
+        </h2>
+        <p class="enterprise-text">
           Product is a set of advanced features for really large teams with
           projects.
         </p>
-        <button type="button">Get in touch with us</button>
+        <button class="enterprise-btn" type="button">
+          Get in touch with us
+        </button>
       </section>
-      <section>
-        <h2>Product is being used with great effects alongside:</h2>
+      <section class="section-product">
+        <h2 class="product-title">
+          Product is being used with great effects alongside:
+        </h2>
         <img src="./prising/amico.png" alt="Smart devices" />
-        <ul>
-          <li>
-            <h3>Enterpreneur</h3>
-            <p>
+        <ul class="product-list">
+          <li class="product-list-item">
+            <h3 class="product-list-subtitle">Enterpreneur</h3>
+            <p class="product-list-text">
               Product is a great way to help medium and samall enterprise owners
               achieve their goals
             </p>
           </li>
-          <li>
-            <h3>Accountants</h3>
-            <p>
+          <li class="product-list-item">
+            <h3 class="product-list-subtitle">Accountants</h3>
+            <p class="product-list-text">
               Whether you are working on contract with clients, or on other key
               accounting documents, Product is for you
             </p>
           </li>
-          <li>
-            <h3>Universities</h3>
-            <p>
+          <li class="product-list-item">
+            <h3 class="product-list-subtitle">Universities</h3>
+            <p class="product-list-text">
               Organize university projects and have documents easily graded
               online with Product
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Frequently asked question</h2>
-        <p>Something is not clear? You need help? Check our FAQ section</p>
-        <ul>
-          <li><h3>What are my payment option?</h3></li>
-          <li>
-            <h3>How can I invite collaborator to platform?</h3>
-            <p>
+      <section class="section-question">
+        <h2 class="question-title">Frequently asked question</h2>
+        <p class="question-text">
+          Something is not clear? You need help? Check our FAQ section
+        </p>
+        <ul class="question-list">
+          <li class="question-list-item">
+            <h3 class="question-list-subtitle">What are my payment option?</h3>
+          </li>
+          <li class="question-list-item">
+            <h3 class="question-list-subtitle">
+              How can I invite collaborator to platform?
+            </h3>
+            <p class="question-list-text">
               After creating your account you will have an oppurtunity to create
               your first project that will be associated withthe collaborators
               e-mail. An invitation will be sent automatically. Then, invited
@@ -142,43 +180,55 @@
               onboarding.
             </p>
           </li>
-          <li><h3>Can I upgrade my plan?</h3></li>
-          <li><h3>Can I cancel my plan at anytime?</h3></li>
+          <li class="question-list-item">
+            <h3 class="question-list-subtitle">Can I upgrade my plan?</h3>
+          </li>
+          <li class="question-list-item">
+            <h3 class="question-list-subtitle">
+              Can I cancel my plan at anytime?
+            </h3>
+          </li>
         </ul>
       </section>
-      <section>
-        <h2>promo</h2>
-        <p>Join 100 Compannies who boost their business with Product</p>
+      <section class="section-promo-last">
+        <h2 class="promo-title-last">promo</h2>
+        <p class="promo-text-last">
+          Join 100 Compannies who boost their business with Product
+        </p>
         <img
           src="./images_customers/screen.png"
           alt="screen"
           width="351"
           height="331"
         />
-        <button type="button">Get This</button>
+        <button class="promo-btn-last" type="button">Get This</button>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html">
         <img src="./images/logo-min.png" alt="logo" width="40" />Product</a
       >
-      <h3>Resource</h3>
-      <ul>
-        <li><a href="">About Us</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">FAQ</a></li>
+      <h3 id="Resource" class="footer-subtitle">Resource</h3>
+      <ul class="footer-list-link">
+        <li class="footer-list-item"><a href="">About Us</a></li>
+        <li class="footer-list-item"><a href="">Blog</a></li>
+        <li class="footer-list-item"><a href="">Contact</a></li>
+        <li class="footer-list-item"><a href="">FAQ</a></li>
       </ul>
-      <h3>Legal Stuff</h3>
-      <ul>
-        <li><a href="">Disclaimer</a></li>
-        <li><a href="">Financing</a></li>
-        <li><a href="">Privacy Policy</a></li>
+      <h3 class="footer-subtitle">Legal Stuff</h3>
+      <ul class="footer-list-link">
+        <li class="footer-list-item"><a href="">Disclaimer</a></li>
+        <li class="footer-list-item"><a href="">Financing</a></li>
+        <li class="footer-list-item"><a href="">Privacy Policy</a></li>
       </ul>
-      <p>knowing you're always on the best energy deal.</p>
-      <button type="button">__________</button>
-      <button type="button">Sign up Now</button>
-      <p>Made With Love By Figmaland All Right Reserved</p>
+      <p class="footer-text">knowing you're always on the best energy deal.</p>
+      <button class="footer-btn-enter" type="button">
+        Enter your phone number
+      </button>
+      <button class="footer-btn-up" type="button">Sign up Now</button>
+      <p class="footer-last-text">
+        Made With Love By Figmaland All Right Reserved
+      </p>
     </footer>
   </body>
 </html>
