--- a/index.html
+++ b/index.html
@@ -338,31 +338,39 @@
           <h2 class="price-title">Price Table</h2>
           <p class="price-text">We offer competitive price</p>
           <ul class="price-list">
-            <li class="price-list-item-free">
-              <h3 class="price-list-subtitle-free">Free</h3>
-              <p class="price-item-text-free">Brief price description</p>
-              <p class="price-item-cost-free">0</p>
-              <p class="price-item-dollar-free">$</p>
-              <p class="price-item-month-free">Per / month</p>
-              <ul class="price-list-sublist-free">
-                <li class="price-sublist-item-free">
-                  <p class="price-sublist-text-free">Only 2 Operators</p>
+            <li class="price-list-item">
+              <h3 class="price-list-subtitle">Free</h3>
+              <p class="price-item-text">Brief price description</p>
+             <div class="price-group">
+                <p class="price-item-cost">0</p>
+                <div class="cost-group">
+                  <p class="price-item-dollar">$</p>
+                  <p class="price-item-month">Per / month</p>
+                </div>
+             </div>
+              <ul class="price-list-sublist">
+                <li class="price-sublist-item">
+                  <p class="price-sublist-text">Only 2 Operators</p>
                 </li>
-                <li class="price-sublist-item-free">
-                  <p class="price-sublist-not-free">Notifications</p>
+                <li class="price-sublist-item">
+                  <p class="price-sublist-text">Notifications</p>
                 </li>
-                <li class="price-sublist-item-free">
-                  <p class="price-sublist-pages-free">Landing Pages</p>
+                <li class="price-sublist-item">
+                  <p class="price-sublist-text">Landing Pages</p>
                 </li>
               </ul>
-              <button class="price-btn-free" type="button">Order Now</button>
+              <button class="price-btn" type="button">Order Now</button>
             </li>
             <li class="price-list-item-standard">
               <h3 class="price-list-subtitle-standard">Standard</h3>
               <p class="price-item-text-standard">Brief price description</p>
-              <p class="price-item-cost-standard">5</p>
-              <p class="price-item-dollar-standard">$</p>
-              <p class="price-item-month-standard">Per / month</p>
+              <div class="price-group">
+                <p class="price-item-cost-standard">5</p>
+                <div class="cost-group">
+                  <p class="price-item-dollar-standard">$</p>
+                  <p class="price-item-month-standard">Per / month</p>
+                </div>
+              </div>
               <ul class="price-list-sublist-standard">
                 <li class="price-sublist-item-standard">
                   <p class="price-sublist-text-standard">5+ Operators</p>
@@ -378,24 +386,25 @@
                 </button>
               </ul>
             </li>
-            <li class="price-list-item-premium">
-              <h3 class="price-list-subtitle-premium">Premium</h3>
-              <p class="price-item-text-premium">Brief price description</p>
-              <p class="price-item-cost-premium">10</p>
-              <p class="price-item-dollar-premium">$</p>
-              <p class="price-item-month-premium">Per / month</p>
-              <ul class="price-list-sublist-premium">
-                <li class="price-sublist-item-premium">
-                  <p class="price-sublist-text-premium">10+ Operators</p>
+            <li class="price-list-item">
+              <h3 class="price-list-subtitle">Premium</h3>
+              <p class="price-item-text">Brief price description</p>
+              <div class="price-group">
+              <p class="price-item-cost">10</p>
+              <div class="cost-group"><p class="price-item-dollar">$</p>
+              <p class="price-item-month">Per / month</p></div></div>
+              <ul class="price-list-sublist">
+                <li class="price-sublist-item">
+                  <p class="price-sublist-text">10+ Operators</p>
                 </li>
-                <li class="price-sublist-item-premium">
-                  <p class="price-sublist-not-premium">Notifications</p>
+                <li class="price-sublist-item">
+                  <p class="price-sublist-not">Notifications</p>
                 </li>
-                <li class="price-sublist-item-premium">
-                  <p class="price-sublist-pages-premium">Landing Pages</p>
+                <li class="price-sublist-item">
+                  <p class="price-sublist-pages">Landing Pages</p>
                 </li>
               </ul>
-              <button class="price-btn-premium" type="button">Order Now</button>
+              <button class="price-btn" type="button">Order Now</button>
             </li>
           </ul>
         </div>
@@ -404,7 +413,7 @@
         <div class="container">
           <h2 class="client-title">What Clients Say</h2>
           <p class="client-text">
-            Problems trying to resolve the conflict between the two major realms
+            Problems trying to resolve the conflict between <br>the two major realms
             of Classical physics: Newtonian mechanics
           </p>
           <ul class="client-list">
@@ -413,43 +422,60 @@
                 Product helps you see how many more days you need to work to
                 reach your financial goal.
               </p>
-              <img src="./images/Ellipse 2-min.png" alt="Wahid Ari" />
-              <h3 class="client-item-subtitle">Wahid Ari</h3>
-              <p class="client-item-prof">Designer</p>
+                <div class="client-designer-group">
+                  <img src="./images/Ellipse 2-min.png" alt="Wahid Ari" />
+                  
+                    <div class="designer-group-text">
+                      <h3 class="client-item-subtitle">Wahid Ari</h3>
+                      <p class="client-item-prof">Designer</p>
+                    </div>
+                </div>
             </li>
             <li class="client-list-item">
               <p class="client-item-text">
                 Product helps you see how many more days you need to work to
                 reach your financial goal.
               </p>
-              <img src="./images/Ellipse 2 (1)-min.png" alt="Wahid Ari" />
-              <h3 class="client-item-subtitle">Wahid Ari</h3>
-              <p class="client-item-prof">Designer</p>
+                <div class="client-designer-group">
+                  <img src="./images/Ellipse 2 (1)-min.png" alt="Wahid Ari" />
+                  <div class="designer-group-text">
+                    <h3 class="client-item-subtitle">Wahid Ari</h3>
+                    <p class="client-item-prof">Designer</p>
+                  </div>
+                </div>
             </li>
             <li class="client-list-item">
               <p class="client-item-text">
                 Product helps you see how many more days you need to work to
                 reach your financial goal.
               </p>
-              <img src="./images/Ellipse 2 (2)-min.png" alt="Wahid Ari" />
-              <h3 class="client-item-subtitle">Wahid Ari</h3>
-              <p class="client-item-prof">Designer</p>
+              <div class="client-designer-group">
+                <img src="./images/Ellipse 2 (2)-min.png" alt="Wahid Ari" />
+                <div class="designer-group-text">
+                  <h3 class="client-item-subtitle">Wahid Ari</h3>
+                  <p class="client-item-prof">Designer</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
       </section>
       <section class="section-promo-last">
         <div class="container">
-          <h2 class="promo-title-last">promo</h2>
-          <p class="promo-text-last">
-            Join 100 Compannies who boost their business with Product
-          </p>
-          <img
-            src="./images_customers/screen.png"
-            alt="screen"
-            width="351"
-            height="331"
-          />
+          <h2 class="promo-title-last visually-hidden">promo</h2>
+          <div class="promo-flex">
+            <p class="promo-text-last">
+              Join 100 Compannies who boost their business with Product
+            </p>
+            <div class="">
+              <img
+                src="./images_customers/screen.png"
+                alt="screen"
+                width="351"
+                height="331"
+              />
+            </div>
+          </div>
           <button class="promo-btn-last" type="button">Get This</button>
         </div>
       </section>
