--- a/index.html
+++ b/index.html
@@ -467,12 +467,12 @@
             <p class="promo-text-last">
               Join 100 Compannies who boost their business with Product
             </p>
-            <div class="">
+            <div class="promo-thumb">
               <img
                 src="./images_customers/screen.png"
                 alt="screen"
                 width="351"
-                height="331"
+            
               />
             </div>
           </div>
@@ -485,27 +485,33 @@
         <a class="logo-footer" href="./index.html">
           <img src="./images/logo-min.png" alt="logo" width="40" />Product</a
         >
-        <h3 id="Resource" class="footer-subtitle">Resource</h3>
-        <ul class="footer-list-link">
-          <li class="footer-list-item"><a href="">About Us</a></li>
-          <li class="footer-list-item"><a href="">Blog</a></li>
-          <li class="footer-list-item"><a href="">Contact</a></li>
-          <li class="footer-list-item"><a href="">FAQ</a></li>
-        </ul>
-        <h3 class="footer-subtitle">Legal Stuff</h3>
-        <ul class="footer-list-link">
-          <li class="footer-list-item"><a href="">Disclaimer</a></li>
-          <li class="footer-list-item"><a href="">Financing</a></li>
-          <li class="footer-list-item"><a href="">Privacy Policy</a></li>
-        </ul>
-        <p class="footer-text">
-          knowing you're always on the best energy deal.
-        </p>
-        <button class="footer-btn-enter" type="button">
-          Enter your phone number
-        </button>
-        <button class="footer-btn-up" type="button">Sign up Now</button>
-        <p class="footer-last-text">
+       <div>
+          <h3 id="Resource" class="footer-subtitle">Resource</h3>
+          <ul class="footer-list-link">
+            <li class="footer-list-item"><a href="">About Us</a></li>
+            <li class="footer-list-item"><a href="">Blog</a></li>
+            <li class="footer-list-item"><a href="">Contact</a></li>
+            <li class="footer-list-item"><a href="">FAQ</a></li>
+          </ul>
+       </div>
+        <div>
+          <h3 class="footer-subtitle">Legal Stuff</h3>
+          <ul class="footer-list-link">
+            <li class="footer-list-item"><a href="">Disclaimer</a></li>
+            <li class="footer-list-item"><a href="">Financing</a></li>
+            <li class="footer-list-item"><a href="">Privacy Policy</a></li>
+          </ul>
+        </div>
+       <div>
+          <p class="footer-text">
+            knowing you're always on the best energy deal.
+          </p>
+          <button class="footer-btn-enter" type="button">
+            Enter your phone number
+          </button>
+          <button class="footer-btn-up" type="button">Sign up Now</button>
+          <div class="footer-last-text">
+       </div>
           Made With Love By Figmaland All Right Reserved
         </p>
       </div>
