--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
              <div class="bg-svg-product bg-svg-product-blue">
                 <svg 
                 class="product-icon" 
-                idth="18" 
+                width="18" 
                 height="18">
                   <use href="./images/icons.svg#icon-product-2"></use>
                 </svg>
